# ComfyUI-Jimeng-API

./: .gitignore  LICENSE  README.md  __init__.py  api_keys.json.example  models_config.py  nodes.py  nodes_image.py  nodes_shared.py  nodes_video.py  pyproject.toml  requirements.txt
example_workflows/: Jimeng Reference to Video.json  Jimeng Seedream 3.json  Jimeng Seedream 4.json  Jimeng Video Generation.json  QuotaSettings.json  Seedance 1.json  Seedance.json  Seedream 3.json  Seedream 4.json  Seedream 5.json  VisualUnderstanding.json  example_seedream4.json  example_seedream4_multi_image_reference.json  即梦参考图生视频.json  即梦图片3.0-图像编辑.json  即梦图片3.0-文生图.json  即梦图片4.0.json  即梦视频生成.json  即梦首尾帧生视频.json
locales/zh/: main.json  nodeDefs.json
nodes/: constants.py  executor.py  models_config.py  nodes_image.py  nodes_image_schema.py  nodes_shared.py  nodes_video.py  nodes_video_schema.py  nodes_visual.py  quota.py  task_runner.py  utils_download.py
web/docs/JimengAPIClient/: zh.md
web/docs/JimengQueryTasks/: zh.md
web/docs/JimengReferenceImage2Video/: zh.md
web/docs/JimengSeedance1/: zh.md
web/docs/JimengSeedance1_5/: zh.md
web/docs/JimengSeedream3/: zh.md
web/docs/JimengSeedream4/: zh.md
web/docs/JimengSeedream5/: zh.md
web/docs/JimengVideoGeneration/: zh.md
web/docs/JimengVideoQueryTasks/: zh.md
web/docs/JimengVisualUnderstanding/: zh.md
web/js/: jimeng_dynamic_widgets.js  jimeng_progress.js
