[project]
name = "ComfyUI-Jimeng-API"
description = "ComfyUI nodes for Volcano Ark (Jimeng) API"
version = "1.9.4"
license = {file = "LICENSE"}
dependencies = ["volcengine-python-sdk[ark]", "openai"]

[project.urls]
Repository = "https://github.com/fkxianzhou/ComfyUI-Jimeng-API"

[tool.comfy]
PublisherId = "fkxianzhou"
DisplayName = "ComfyUI Jimeng API"
Icon = "https://registry.npmmirror.com/@lobehub/icons-static-png/1.74.0/files/dark/jimeng-color.png"
